[gd_scene load_steps=3 format=2]

[ext_resource path="res://UIComponents/SquareButton.gd" type="Script" id=1]
[ext_resource path="res://UIComponents/SkillMenu/Entry.gd" type="Script" id=2]

[node name="Entry" type="HBoxContainer"]
margin_top = 26.0
margin_right = 124.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EntryName" type="Label" parent="."]
margin_top = 5.0
margin_right = 86.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "<EntryName>"

[node name="Subtract" type="Button" parent="."]
margin_left = 90.0
margin_right = 114.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
text = "-"
script = ExtResource( 1 )

[node name="Value" type="Label" parent="."]
margin_left = 118.0
margin_top = 5.0
margin_right = 150.0
margin_bottom = 19.0
rect_min_size = Vector2( 32, 0 )
text = "<0>"
align = 1

[node name="Add" type="Button" parent="."]
margin_left = 154.0
margin_right = 178.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
text = "+"
script = ExtResource( 1 )
[connection signal="pressed" from="Subtract" to="." method="_on_Subtract_pressed"]
[connection signal="pressed" from="Add" to="." method="_on_Add_pressed"]
